--- a/02_code/android/eOrderMobile/res/values/strings.xml
+++ b/02_code/android/eOrderMobile/res/values/strings.xml
@@ -40,5 +40,9 @@
     <string name="feed_type_8">小炒</string>
     <string name="feed_type_9">饮料</string>
         
+    <!-- toast -->
+    <string name="toast_please_input_userid">请输入会员号！</string>
+    
+    
 
 </resources>
