--- a/02_code/android/eOrderMobile/res/values/strings.xml
+++ b/02_code/android/eOrderMobile/res/values/strings.xml
@@ -42,11 +42,13 @@
         
     <!-- toast -->
     <string name="toast_please_input_userid">请输入会员号！</string>
+    <string name="toast_please_order_first">请先点菜！</string>
     
     <!-- Button -->
     <string name="main_griditem_btn_order">下单</string>
     <string name="main_griditem_text_name">菜品名</string>
     <string name="main_griditem_text_price">0</string>
+    <string name="main_griditem_text_rmb">￥</string>
     
     
 
