完成订单记录查询界面

--- a/02_code/android/eOrderMobile/res/values/strings.xml
+++ b/02_code/android/eOrderMobile/res/values/strings.xml
@@ -73,5 +73,10 @@
     <string name="order_text_btn_ok">确定</string>
     
     
+    <!-- OrderHestory -->
+    <string name="orderhestory_item_text_order">订单:</string>
+    <string name="orderhestory_item_text_time">时间:</string>
+    <string name="orderhestory_item_text_totalprice">金额:</string>
+    
 
 </resources>
