--- a/02_code/android/eOrderMobile/res/values/strings.xml
+++ b/02_code/android/eOrderMobile/res/values/strings.xml
@@ -85,6 +85,7 @@
     <string name="setting_activity_text_label">设置</string>
     <string name="setting_activity_text_service">服务器地址</string>
     <string name="setting_activity_text_input">请输入服务器地址</string>
+    <string name="setting_activity_text_successful">服务器地址设置成功!</string>
 																				
     <!-- About -->								
     <string name="about_activity_text_label">关于</string>
