add place order service

--- a/02_code/web/eorder-ws/src/main/resources/messages/messages_en_US.properties
+++ b/02_code/web/eorder-ws/src/main/resources/messages/messages_en_US.properties
@@ -1,2 +1,6 @@
+###identifiers for exceptions
 user_not_found_exception=User Not Found by Criteria - {0}
-place_order_success=Place An Order Successfully
+zero_order_item_exception=No Order Item Exsits
+dish_not_found_exception=Dish Not Found - {0}
+
+place_order_success=Place An Order Successfully - {0}
