--- a/02_code/web/eorder-ws/src/main/resources/messages/messages_zh_CN.properties
+++ b/02_code/web/eorder-ws/src/main/resources/messages/messages_zh_CN.properties
@@ -1,2 +1,6 @@
+###\u5f02\u5e38\u7c7b\u6807\u8bc6\u7b26
 user_not_found_exception=\u672a\u627e\u5230\u7528\u6237 - {0}
-place_order_success=\u521b\u5efa\u8ba2\u5355\u6210\u529f
+zero_order_item_exception=\u83dc\u5355\u660e\u7ec6\u4e3a\u7a7a
+dish_not_found_exception=\u672a\u627e\u5230\u83dc\u54c1 - {0}
+
+place_order_success=\u521b\u5efa\u8ba2\u5355\u6210\u529f - {0}
