--- a/02_code/android/eOrderMobile/res/values/strings.xml
+++ b/02_code/android/eOrderMobile/res/values/strings.xml
@@ -63,15 +63,18 @@
     <string name="order_text_discount">折扣</string>
     <string name="order_text_no_discount">无折扣</string>
     <string name="order_text_title_tableid">桌号</string>
+    <string name="order_text_title_table_people_count">人数</string>
     <string name="order_text_title_userid">会员号</string>
     <string name="order_text_title_employee">员工号</string>
     <string name="order_text_hint_tableid">请输入桌号</string>
+    <string name="order_text_hint_poeple_count">请输入人数</string>
     <string name="order_text_hint_qrcode">扫描二维码</string>
     <string name="order_text_hint_userid">请输入会员号</string>
     <string name="order_text_btn_discount">获取折扣</string>
     <string name="order_text_btn_ok">确定</string>
     <string name="order_toast_please_input_userid">请输入会员号</string>
     <string name="order_toast_please_input_tableId">请输入桌号</string>
+    <string name="order_toast_please_input_people_count">请输入人数</string>
     <string name="order_toast_please_input_employeeId">请输入员工号</string>
     <string name="order_toast_order_successful">下单成功！</string>
     <string name="order_toast_scanresult_fail">员工号为非法字符！</string>
