--- a/02_code/web/eorder/src/main/resources/messages/messages_zh_CN.properties
+++ b/02_code/web/eorder/src/main/resources/messages/messages_zh_CN.properties
@@ -1,5 +1,3 @@
-user_not_found_exception=\u672a\u627e\u5230\u7528\u6237 - {0}
-
 #\u516c\u5171\u5b57\u6bb5
 add=\u6dfb\u52a0
 edit=\u7f16\u8f91
@@ -34,8 +32,11 @@ confirm=\u786e\u5b9a
 login_info=\u6b22\u8fce\u767b\u5f55\u9910\u5385\u8ba2\u9910\u540e\u53f0\u7ba1\u7406\u7cfb\u7edf
 login=\u767b\u5f55
 remember_password=\u8bb0\u4f4f\u5bc6\u7801
+forget_password=\u5fd8\u8bb0\u5bc6\u7801\uff1f
 login_failure=\u767b\u5f55\u5931\u8d25\uff0c\u8bf7\u91cd\u8bd5\u3002
 login_failure_reason=\u539f\u56e0:
+copyright=\u7248\u6743\u6240\u6709
+copyright_info=\u4ec5\u4f9b\u5b66\u4e60\u4ea4\u6d41\uff0c\u52ff\u7528\u4e8e\u4efb\u4f55\u5546\u4e1a\u7528\u9014
 
 # \u9875\u9996
 help=\u5e2e\u52a9
@@ -56,6 +57,7 @@ function_desc_empty=\u6743\u9650\u63cf\u8ff0\u4e0d\u80fd\u4e3a\u7a7a\uff01
 function_path_empty=\u6743\u9650\u8def\u5f84\u4e0d\u80fd\u4e3a\u7a7a\uff01
 function_using=\u8be5\u6743\u9650\u5df2\u88ab\u5206\u914d\u7ed9\u67d0\u4e2a\u89d2\u8272\uff0c\u4e0d\u80fd\u5220\u9664\uff01
 function_name=\u6743\u9650\u540d\u79f0
+function_root=\u6839\u529f\u80fd\u8282\u70b9
 
 # \u89d2\u8272\u6a21\u5757
 role_name=\u89d2\u8272\u540d\u79f0
