--- a/02_code/web/eorder-ws/src/main/resources/messages/messages_en_US.properties
+++ b/02_code/web/eorder-ws/src/main/resources/messages/messages_en_US.properties
@@ -2,5 +2,21 @@
 user_not_found_exception=User Not Found by Criteria - {0}
 zero_order_item_exception=No Order Item Exsits
 dish_not_found_exception=Dish Not Found - {0}
+duplicate_name_exception=The Name Already Exists - {0}
+category_not_found=The Category Not Found - {0}
+user_level_not_found_exception=The User Level Not Found - {0}
+page_out_of_bound_exception=The Page Index Out of Bound - Current Page {0}, Total Page {1}
+invalid_page_size_exception=Invalid Page Size - {0}
+update_user_level_exception=Update User Level Failed - {0}
+member_ship_already_existing_exception=The Membership Already Existing - {0}
 
 place_order_success=Place An Order Successfully - {0}
+
+category_id = Category ID: {0}
+category_name=Category Name: {0}
+dish_id=DishID: {0}
+dish_name=Dish Name: {0}
+user_level_id=User Level ID: {0}
+user_level_name=User Level Name: {0}
+no_member_ship=No MemberShip
+up_down_user_level={0}, {1}
