add category&dish classes

--- a/02_code/web/eorder/src/main/resources/messages/messages_en_US.properties
+++ b/02_code/web/eorder/src/main/resources/messages/messages_en_US.properties
@@ -94,3 +94,24 @@ cellphone_occupy=\u624b\u673a\u53f7\u7801\u5df2\u88ab\u5360\u7528\uff01
 cellphone_empty=\u624b\u673a\u53f7\u7801\u4e0d\u80fd\u4e3a\u7a7a\uff01
 cellphone_invalid=\u624b\u673a\u53f7\u7801\u65e0\u6548\uff01
 role_list_empty=\u89d2\u8272\u5217\u8868\u4e0d\u80fd\u4e3a\u7a7a\uff01
+
+###identifiers for exceptions
+user_not_found_exception=User Not Found by Criteria - {0}
+zero_order_item_exception=No Order Item Exsits
+dish_not_found_exception=Dish Not Found - {0}
+duplicate_name_exception=The Name Already Exists - {0}
+category_not_found=The Category Not Found - {0}
+user_level_not_found_exception=The User Level Not Found - {0}
+page_out_of_bound_exception=The Page Index Out of Bound - Current Page {0}, Total Page {1}
+invalid_page_size_exception=Invalid Page Size - {0}
+update_user_level_exception=Update User Level Failed - {0}
+member_ship_already_existing_exception=The Membership Already Existing - {0}
+place_order_success=Place An Order Successfully - {0}
+category_id = Category ID: {0}
+category_name=Category Name: {0}
+dish_id=DishID: {0}
+dish_name=Dish Name: {0}
+user_level_id=User Level ID: {0}
+user_level_name=User Level Name: {0}
+no_member_ship=No MemberShip
+up_down_user_level={0}, {1}
