--- a/02_code/android/eOrderMobile/res/values/strings.xml
+++ b/02_code/android/eOrderMobile/res/values/strings.xml
@@ -88,7 +88,8 @@
     <string name="orderhestory_item_text_time">时间:</string>
     <string name="orderhestory_item_text_totalprice">金额:</string>
     <string name="order_toast_no_userid_fail">会员号不存在！</string>
-      
+    <string name="order_toast_no_order_list_fail">没有订单记录！</string>
+      	
    	<!-- OrderHestoryDetail -->
    	<string name="orderhestorydetail_activity_text_label">已点菜品明细</string>
    	<string name="orderhestorydetail_item_text_name">菜品名</string>
