--- a/02_code/web/eorder-ws/src/main/resources/messages/messages_en_US.properties
+++ b/02_code/web/eorder-ws/src/main/resources/messages/messages_en_US.properties
@@ -22,3 +22,4 @@ user_level_name=User Level Name: {0}
 no_member_ship=No MemberShip
 up_down_user_level={0}, {1}
 cellphone_num=Cellphone: {0}
+employee_id=Employee ID: {0}
