--- a/02_code/web/eorder-ws/src/main/resources/messages/messages_zh_CN.properties
+++ b/02_code/web/eorder-ws/src/main/resources/messages/messages_zh_CN.properties
@@ -22,3 +22,4 @@ user_level_name=\u4f1a\u5458\u7b49\u7ea7\u540d\u79f0: {0}
 no_member_ship=\u6ca1\u6709\u4f1a\u5458\u4fe1\u606f
 up_down_user_level=\u5347\u7ea7/\u964d\u7ea7\u4f1a\u5458\u7b49\u7ea7\u5931\u8d25:{0}, {1}
 cellphone_num=\u624b\u673a\u53f7: {0}
+employee_id=\u5458\u5de5\u53f7: {0}
