add membership services

--- a/02_code/web/eorder-ws/src/main/resources/messages/messages_en_US.properties
+++ b/02_code/web/eorder-ws/src/main/resources/messages/messages_en_US.properties
@@ -15,6 +15,7 @@ place_order_success=Place An Order Successfully - {0}
 
 category_id = Category ID: {0}
 category_name=Category Name: {0}
+user_id=User ID: {0}
 dish_id=DishID: {0}
 dish_name=Dish Name: {0}
 user_level_id=User Level ID: {0}
