--- a/02_code/web/eorder-ws/src/main/resources/messages/messages_zh_CN.properties
+++ b/02_code/web/eorder-ws/src/main/resources/messages/messages_zh_CN.properties
@@ -16,6 +16,7 @@ place_order_success=\u521b\u5efa\u8ba2\u5355\u6210\u529f - {0}
 category_id = \u83dc\u5355\u5206\u7c7bID: {0}
 category_name=\u83dc\u5355\u5206\u7c7b\u540d: {0}
 dish_id=\u83dc\u54c1ID: {0}
+user_id=\u7528\u6237ID: {0}
 dish_name=\u83dc\u54c1\u540d\u79f0: {0}
 user_level_id=\u4f1a\u5458\u7b49\u7ea7ID: {0}
 user_level_name=\u4f1a\u5458\u7b49\u7ea7\u540d\u79f0: {0}
