update eorder-dish project and sql

--- a/02_code/web/eorder-dish/src/main/resources/messages/messages_zh_CN.properties
+++ b/02_code/web/eorder-dish/src/main/resources/messages/messages_zh_CN.properties
@@ -99,11 +99,13 @@ role_list_empty=\u89d2\u8272\u5217\u8868\u4e0d\u80fd\u4e3a\u7a7a\uff01
 
 #\u83dc\u54c1\u5206\u7c7b\u6a21\u5757
 category_name=\u5206\u7c7b\u540d\u79f0
+category_picture=\u5206\u7c7b\u540d\u79f0
 category_manage=\u5206\u7c7b\u7ba1\u7406
 add_category=\u6dfb\u52a0\u5206\u7c7b
 edit_category=\u4fee\u6539\u5206\u7c7b
 category_name_occupy=\u5206\u7c7b\u540d\u79f0\u5df2\u88ab\u5360\u7528\uff01
 category_name_empty=\u5206\u7c7b\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a\uff01
+category_picture_empty=\u5206\u7c7b\u56fe\u7247\u4e0d\u80fd\u4e3a\u7a7a\uff01
 
 #\u83dc\u54c1\u6a21\u5757
 dish_name=\u83dc\u54c1\u540d\u79f0
@@ -114,6 +116,7 @@ add_dish=\u6dfb\u52a0\u83dc\u54c1
 edit_dish=\u4fee\u6539\u83dc\u54c1
 dish_name_occupy=\u83dc\u54c1\u540d\u79f0\u5df2\u88ab\u5360\u7528\uff01
 dish_name_empty=\u83dc\u54c1\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a\uff01
+dish_price_empty=\u83dc\u54c1\u4ef7\u683c\u4e0d\u80fd\u4e3a\u7a7a\uff01
 
 ###\u5f02\u5e38\u7c7b\u6807\u8bc6\u7b26
 user_not_found_exception=\u672a\u627e\u5230\u7528\u6237 - {0}
