--- a/02_code/web/eorder-dish/src/main/resources/messages/messages.properties
+++ b/02_code/web/eorder-dish/src/main/resources/messages/messages.properties
@@ -99,6 +99,7 @@ role_list_empty=\u89d2\u8272\u5217\u8868\u4e0d\u80fd\u4e3a\u7a7a\uff01
 
 #\u83dc\u54c1\u5206\u7c7b\u6a21\u5757
 category_name=\u5206\u7c7b\u540d\u79f0
+category_picture=\u5206\u7c7b\u540d\u79f0
 category_manage=\u5206\u7c7b\u7ba1\u7406
 add_category=\u6dfb\u52a0\u5206\u7c7b
 edit_category=\u4fee\u6539\u5206\u7c7b
@@ -114,6 +115,7 @@ add_dish=\u6dfb\u52a0\u83dc\u54c1
 edit_dish=\u4fee\u6539\u83dc\u54c1
 dish_name_occupy=\u83dc\u54c1\u540d\u79f0\u5df2\u88ab\u5360\u7528\uff01
 dish_name_empty=\u83dc\u54c1\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a\uff01
+dish_price_empty=\u83dc\u54c1\u4ef7\u683c\u4e0d\u80fd\u4e3a\u7a7a\uff01
 
 ###\u5f02\u5e38\u7c7b\u6807\u8bc6\u7b26
 user_not_found_exception=\u672a\u627e\u5230\u7528\u6237 - {0}
@@ -124,6 +126,7 @@ category_not_found=\u672a\u627e\u5230\u83dc\u54c1\u5206\u7c7b - {0}
 user_level_not_found_exception=\u672a\u627e\u5230\u4f1a\u5458\u7b49\u7ea7 - {0}
 page_out_of_bound_exception=\u5206\u9875\u8d85\u51fa\u8303\u56f4 - \u5f53\u524d\u5206\u9875{0}, \u603b\u5206\u9875{1}
 invalid_page_size_exception=\u975e\u6cd5\u5206\u9875\u5927\u5c0f - {0}
+io_exception=\u6587\u4ef6\u6d41\u8bfb\u5199\u5f02\u5e38
 update_user_level_exception=\u66f4\u65b0\u4f1a\u5458\u7b49\u7ea7\u4e0d\u6210\u529f - {0}
 member_ship_already_existing_exception=\u4f1a\u5458\u4fe1\u606f\u5df2\u7ecf\u5b58\u5728 - {0}
 place_order_success=\u521b\u5efa\u8ba2\u5355\u6210\u529f - {0}
