--- a/02_code/web/eorder-dish/src/main/resources/messages/messages_zh_CN.properties
+++ b/02_code/web/eorder-dish/src/main/resources/messages/messages_zh_CN.properties
@@ -127,7 +127,8 @@ category_not_found=\u672a\u627e\u5230\u83dc\u54c1\u5206\u7c7b - {0}
 user_level_not_found_exception=\u672a\u627e\u5230\u4f1a\u5458\u7b49\u7ea7 - {0}
 page_out_of_bound_exception=\u5206\u9875\u8d85\u51fa\u8303\u56f4 - \u5f53\u524d\u5206\u9875{0}, \u603b\u5206\u9875{1}
 invalid_page_size_exception=\u975e\u6cd5\u5206\u9875\u5927\u5c0f - {0}
-io_exception=\u6587\u4ef6\u6d41\u8bfb\u5199\u5f02\u5e38
+io_exception=\u6587\u4ef6\u8bfb\u5199\u5f02\u5e38 - {0}
+file_not_found_fxception=\u672a\u627e\u5230\u6587\u4ef6 - {0}
 update_user_level_exception=\u66f4\u65b0\u4f1a\u5458\u7b49\u7ea7\u4e0d\u6210\u529f - {0}
 member_ship_already_existing_exception=\u4f1a\u5458\u4fe1\u606f\u5df2\u7ecf\u5b58\u5728 - {0}
 place_order_success=\u521b\u5efa\u8ba2\u5355\u6210\u529f - {0}
