--- a/02_code/web/eorder-dish/src/main/resources/messages/messages_zh_CN.properties
+++ b/02_code/web/eorder-dish/src/main/resources/messages/messages_zh_CN.properties
@@ -116,7 +116,7 @@ add_dish=\u6dfb\u52a0\u83dc\u54c1
 edit_dish=\u4fee\u6539\u83dc\u54c1
 dish_name_occupy=\u83dc\u54c1\u540d\u79f0\u5df2\u88ab\u5360\u7528\uff01
 dish_name_empty=\u83dc\u54c1\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a\uff01
-dish_price_empty=\u83dc\u54c1\u4ef7\u683c\u4e0d\u80fd\u4e3a\u7a7a\uff01
+dish_price_empty=\u83dc\u54c1\u4ef7\u683c\u4e0d\u80fd\u4e3a\u7a7a\u62160\uff01
 
 ###\u5f02\u5e38\u7c7b\u6807\u8bc6\u7b26
 user_not_found_exception=\u672a\u627e\u5230\u7528\u6237 - {0}
