fix orderService issues

--- a/02_code/web/eorder-ws/src/main/resources/messages/messages_en_US.properties
+++ b/02_code/web/eorder-ws/src/main/resources/messages/messages_en_US.properties
@@ -10,6 +10,7 @@ invalid_page_size_exception=Invalid Page Size - {0}
 update_user_level_exception=Update User Level Failed - {0}
 member_ship_already_existing_exception=The Membership Already Existing - {0}
 order_not_found_exception=Order Not Found - {0}
+order_operation_exception=Order Operation Failed - {0}
 
 place_order_success=Place An Order Successfully - {0}
 
