--- a/02_code/web/eorder-ws/src/main/resources/messages/messages_zh_CN.properties
+++ b/02_code/web/eorder-ws/src/main/resources/messages/messages_zh_CN.properties
@@ -10,6 +10,7 @@ invalid_page_size_exception=\u975e\u6cd5\u5206\u9875\u5927\u5c0f - {0}
 update_user_level_exception=\u66f4\u65b0\u4f1a\u5458\u7b49\u7ea7\u4e0d\u6210\u529f - {0}
 member_ship_already_existing_exception=\u4f1a\u5458\u4fe1\u606f\u5df2\u7ecf\u5b58\u5728 - {0}
 order_not_found_exception=\u8ba2\u5355\u4e0d\u5b58\u5728 - {0}
+order_operation_exception=\u66f4\u65b0\u8ba2\u5355\u5931\u8d25 - {0}
 
 place_order_success=\u521b\u5efa\u8ba2\u5355\u6210\u529f - {0}
 
