--- a/02_code/web/eorder-member/src/main/resources/messages/messages_en_US.properties
+++ b/02_code/web/eorder-member/src/main/resources/messages/messages_en_US.properties
@@ -106,12 +106,21 @@ page_out_of_bound_exception=The Page Index Out of Bound - Current Page {0}, Tota
 invalid_page_size_exception=Invalid Page Size - {0}
 update_user_level_exception=Update User Level Failed - {0}
 member_ship_already_existing_exception=The Membership Already Existing - {0}
+order_not_found_exception=Order Not Found - {0}
+order_operation_exception=Order Operation Failed - {0}
+
 place_order_success=Place An Order Successfully - {0}
+
 category_id = Category ID: {0}
 category_name=Category Name: {0}
+user_id=User ID: {0}
 dish_id=DishID: {0}
 dish_name=Dish Name: {0}
 user_level_id=User Level ID: {0}
 user_level_name=User Level Name: {0}
 no_member_ship=No MemberShip
 up_down_user_level={0}, {1}
+cellphone_num=Cellphone: {0}
+employee_id=Employee ID: {0}
+order_id=Order ID: {0}
+order_seq=Order Seq: {0}
