--- a/02_code/web/eorder-member/src/main/resources/messages/messages_zh_CN.properties
+++ b/02_code/web/eorder-member/src/main/resources/messages/messages_zh_CN.properties
@@ -106,12 +106,21 @@ page_out_of_bound_exception=\u5206\u9875\u8d85\u51fa\u8303\u56f4 - \u5f53\u524d\
 invalid_page_size_exception=\u975e\u6cd5\u5206\u9875\u5927\u5c0f - {0}
 update_user_level_exception=\u66f4\u65b0\u4f1a\u5458\u7b49\u7ea7\u4e0d\u6210\u529f - {0}
 member_ship_already_existing_exception=\u4f1a\u5458\u4fe1\u606f\u5df2\u7ecf\u5b58\u5728 - {0}
+order_not_found_exception=\u8ba2\u5355\u4e0d\u5b58\u5728 - {0}
+order_operation_exception=\u66f4\u65b0\u8ba2\u5355\u5931\u8d25 - {0}
+
 place_order_success=\u521b\u5efa\u8ba2\u5355\u6210\u529f - {0}
+
 category_id = \u83dc\u5355\u5206\u7c7bID: {0}
 category_name=\u83dc\u5355\u5206\u7c7b\u540d: {0}
 dish_id=\u83dc\u54c1ID: {0}
+user_id=\u7528\u6237ID: {0}
 dish_name=\u83dc\u54c1\u540d\u79f0: {0}
 user_level_id=\u4f1a\u5458\u7b49\u7ea7ID: {0}
 user_level_name=\u4f1a\u5458\u7b49\u7ea7\u540d\u79f0: {0}
 no_member_ship=\u6ca1\u6709\u4f1a\u5458\u4fe1\u606f
 up_down_user_level=\u5347\u7ea7/\u964d\u7ea7\u4f1a\u5458\u7b49\u7ea7\u5931\u8d25:{0}, {1}
+cellphone_num=\u624b\u673a\u53f7: {0}
+employee_id=\u5458\u5de5\u53f7: {0}
+order_id=\u8ba2\u5355ID: {0}
+order_seq=\u8ba2\u5355\u5e8f\u53f7: {0}
