--- a/02_code/web/eorder-dish/src/main/resources/messages/messages_zh_CN.properties
+++ b/02_code/web/eorder-dish/src/main/resources/messages/messages_zh_CN.properties
@@ -135,10 +135,10 @@ order_operation_exception=\u66f4\u65b0\u8ba2\u5355\u5931\u8d25 - {0}
 place_order_success=\u521b\u5efa\u8ba2\u5355\u6210\u529f - {0}
 
 category_id = \u83dc\u5355\u5206\u7c7bID: {0}
-category_name=\u83dc\u5355\u5206\u7c7b\u540d: {0}
+category_name_msg=\u83dc\u5355\u5206\u7c7b\u540d: {0}
 dish_id=\u83dc\u54c1ID: {0}
 user_id=\u7528\u6237ID: {0}
-dish_name=\u83dc\u54c1\u540d\u79f0: {0}
+dish_name_msg=\u83dc\u54c1\u540d\u79f0: {0}
 user_level_id=\u4f1a\u5458\u7b49\u7ea7ID: {0}
 user_level_name=\u4f1a\u5458\u7b49\u7ea7\u540d\u79f0: {0}
 no_member_ship=\u6ca1\u6709\u4f1a\u5458\u4fe1\u606f
