fix category not found excpetion issue

--- a/02_code/web/eorder-dish/src/main/resources/messages/messages_en_US.properties
+++ b/02_code/web/eorder-dish/src/main/resources/messages/messages_en_US.properties
@@ -122,7 +122,7 @@ user_not_found_exception=\u672a\u627e\u5230\u7528\u6237 - {0}
 zero_order_item_exception=\u83dc\u5355\u660e\u7ec6\u4e3a\u7a7a
 dish_not_found_exception=\u672a\u627e\u5230\u83dc\u54c1 - {0}
 duplicate_name_exception=\u547d\u540d\u5df2\u7ecf\u5b58\u5728 - {0}
-category_not_found=\u672a\u627e\u5230\u83dc\u54c1\u5206\u7c7b - {0}
+category_not_found_exception=\u672a\u627e\u5230\u83dc\u54c1\u5206\u7c7b - {0}
 user_level_not_found_exception=\u672a\u627e\u5230\u4f1a\u5458\u7b49\u7ea7 - {0}
 page_out_of_bound_exception=\u5206\u9875\u8d85\u51fa\u8303\u56f4 - \u5f53\u524d\u5206\u9875{0}, \u603b\u5206\u9875{1}
 invalid_page_size_exception=\u975e\u6cd5\u5206\u9875\u5927\u5c0f - {0}
