--- a/02_code/web/eorder-member/src/main/resources/messages/messages.properties
+++ b/02_code/web/eorder-member/src/main/resources/messages/messages.properties
@@ -1,8 +1,10 @@
 #\u516c\u5171\u5b57\u6bb5
 eorder=\u9910\u5385\u8ba2\u9910\u7cfb\u7edf
+query=\u67e5\u8be2
 add=\u6dfb\u52a0
 edit=\u7f16\u8f91
 delete=\u5220\u9664
+upload=\u4e0a\u4f20
 add_success=\u65b0\u589e\u6210\u529f\uff01
 add_failure=\u65b0\u589e\u5931\u8d25\uff01
 update_success=\u4fee\u6539\u6210\u529f\uff01
@@ -95,12 +97,38 @@ cellphone_empty=\u624b\u673a\u53f7\u7801\u4e0d\u80fd\u4e3a\u7a7a\uff01
 cellphone_invalid=\u624b\u673a\u53f7\u7801\u65e0\u6548\uff01
 role_list_empty=\u89d2\u8272\u5217\u8868\u4e0d\u80fd\u4e3a\u7a7a\uff01
 
+#\u83dc\u5355\u5206\u7c7b\u6a21\u5757
+category_name=\u83dc\u5355\u5206\u7c7b\u540d\u79f0
+category_picture=\u83dc\u5355\u5206\u7c7b\u56fe\u7247
+category_manage=\u83dc\u5355\u5206\u7c7b\u7ba1\u7406
+add_category=\u6dfb\u52a0\u83dc\u5355\u5206\u7c7b
+edit_category=\u4fee\u6539\u83dc\u5355\u5206\u7c7b
+category_name_occupy=\u83dc\u5355\u5206\u7c7b\u540d\u79f0\u5df2\u88ab\u5360\u7528\uff01
+category_name_empty=\u83dc\u5355\u5206\u7c7b\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a\uff01
+category_picture_empty=\u83dc\u5355\u5206\u7c7b\u56fe\u7247\u4e0d\u80fd\u4e3a\u7a7a\uff01
+
+#\u83dc\u54c1\u6a21\u5757
+dish_name=\u83dc\u54c1\u540d\u79f0
+dish_price=\u83dc\u54c1\u4ef7\u683c
+dish_picture=\u83dc\u54c1\u56fe\u7247
+dish_manage=\u83dc\u54c1\u7ba1\u7406
+add_dish=\u6dfb\u52a0\u83dc\u54c1
+edit_dish=\u4fee\u6539\u83dc\u54c1
+dish_name_occupy=\u83dc\u54c1\u540d\u79f0\u5df2\u88ab\u5360\u7528\uff01
+dish_name_empty=\u83dc\u54c1\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a\uff01
+dish_price_empty=\u83dc\u54c1\u4ef7\u683c\u4e0d\u80fd\u4e3a\u7a7a\u62160\uff01
+
+#\u4f1a\u5458\u7ba1\u7406\u6a21\u5757
+level_name=\u4f1a\u5458\u7b49\u7ea7
+level_discount=\u6298\u6263
+level_score=\u5347\u7ea7\u79ef\u5206
+
 ###\u5f02\u5e38\u7c7b\u6807\u8bc6\u7b26
 user_not_found_exception=\u672a\u627e\u5230\u7528\u6237 - {0}
 zero_order_item_exception=\u83dc\u5355\u660e\u7ec6\u4e3a\u7a7a
 dish_not_found_exception=\u672a\u627e\u5230\u83dc\u54c1 - {0}
 duplicate_name_exception=\u547d\u540d\u5df2\u7ecf\u5b58\u5728 - {0}
-category_not_found=\u672a\u627e\u5230\u83dc\u54c1\u5206\u7c7b - {0}
+category_not_found_exception=\u672a\u627e\u5230\u83dc\u54c1\u5206\u7c7b - {0}
 user_level_not_found_exception=\u672a\u627e\u5230\u4f1a\u5458\u7b49\u7ea7 - {0}
 page_out_of_bound_exception=\u5206\u9875\u8d85\u51fa\u8303\u56f4 - \u5f53\u524d\u5206\u9875{0}, \u603b\u5206\u9875{1}
 invalid_page_size_exception=\u975e\u6cd5\u5206\u9875\u5927\u5c0f - {0}
@@ -112,10 +140,10 @@ order_operation_exception=\u66f4\u65b0\u8ba2\u5355\u5931\u8d25 - {0}
 place_order_success=\u521b\u5efa\u8ba2\u5355\u6210\u529f - {0}
 
 category_id = \u83dc\u5355\u5206\u7c7bID: {0}
-category_name=\u83dc\u5355\u5206\u7c7b\u540d: {0}
+category_name_msg=\u83dc\u5355\u5206\u7c7b\u540d: {0}
 dish_id=\u83dc\u54c1ID: {0}
 user_id=\u7528\u6237ID: {0}
-dish_name=\u83dc\u54c1\u540d\u79f0: {0}
+dish_name_msg=\u83dc\u54c1\u540d\u79f0: {0}
 user_level_id=\u4f1a\u5458\u7b49\u7ea7ID: {0}
 user_level_name=\u4f1a\u5458\u7b49\u7ea7\u540d\u79f0: {0}
 no_member_ship=\u6ca1\u6709\u4f1a\u5458\u4fe1\u606f
