--- a/02_code/web/eorder-member/src/main/resources/messages/messages_en_US.properties
+++ b/02_code/web/eorder-member/src/main/resources/messages/messages_en_US.properties
@@ -121,6 +121,15 @@ dish_price_empty=\u83dc\u54c1\u4ef7\u683c\u4e0d\u80fd\u4e3a\u7a7a\uff01
 level_name=\u4f1a\u5458\u7b49\u7ea7
 level_discount=\u6298\u6263
 level_score=\u5347\u7ea7\u79ef\u5206
+level_add=\u6dfb\u52a0\u4f1a\u5458\u7b49\u7ea7
+level_name_label=\u7b49\u7ea7\u540d\u79f0
+level_discount_label=\u7b49\u7ea7\u6298\u6263
+level_score_label=\u7b49\u7ea7\u79ef\u5206
+level_add_success={0} - \u4f1a\u5458\u7b49\u7ea7\u6dfb\u52a0\u6210\u529f\uff01
+level_remove_success=\u4f1a\u5458\u7b49\u7ea7\u5220\u9664\u6210\u529f\uff01
+level_discount_rule=\u4f1a\u5458\u6298\u6263\u5fc5\u987b\u662f1\u523010\u4e4b\u95f4\u7684\u6570\u503c
+level_name_rule=\u4f1a\u5458\u7b49\u7ea7\u540d\u79f0\u4e0d\u53ef\u4e3a\u7a7a
+level_score_rule=\u4f1a\u5458\u7b49\u7ea7\u79ef\u5206\u5fc5\u987b\u5927\u4e8e0
 
 ###\u5f02\u5e38\u7c7b\u6807\u8bc6\u7b26
 user_not_found_exception=\u672a\u627e\u5230\u7528\u6237 - {0}
