finish member functions

--- a/02_code/web/eorder-member/src/main/resources/messages/messages.properties
+++ b/02_code/web/eorder-member/src/main/resources/messages/messages.properties
@@ -132,6 +132,19 @@ level_discount_rule=\u4f1a\u5458\u6298\u6263\u5fc5\u987b\u662f1\u523010\u4e4b\u9
 level_name_rule=\u4f1a\u5458\u7b49\u7ea7\u540d\u79f0\u4e0d\u53ef\u4e3a\u7a7a
 level_score_rule=\u4f1a\u5458\u7b49\u7ea7\u79ef\u5206\u5fc5\u987b\u5927\u4e8e0
 level_invalid_vo=\u975e\u6cd5\u4f1a\u5458\u7b49\u7ea7\u8f93\u5165
+level_edit=\u7f16\u8f91\u4f1a\u5458\u7b49\u7ea7
+level_update_success={0} - \u4f1a\u5458\u7b49\u7ea7\u4fee\u6539\u6210\uff01
+member_name=\u7528\u6237\u4f1a\u5458
+member_id=\u4f1a\u5458\u53f7
+member_score=\u4f1a\u5458\u79ef\u5206
+member_select_level=\u8bf7\u5148\u9009\u62e9\u4e00\u4e2a\u4f1a\u5458\u7b49\u7ea7
+member_add=\u6dfb\u52a0\u4f1a\u5458
+member_id_label=\u4f1a\u5458\u53f7(\u624b\u673a\u53f7)
+member_edit=\u7f16\u8f91\u7528\u6237\u4f1a\u5458\u4fe1\u606f
+member_add_success=\u6dfb\u52a0\u65b0\u4f1a\u5458\u6210\u529f!
+member_update_success=\u66f4\u65b0\u4f1a\u5458\u6210\u529f\uff01
+member_empty=\u5f53\u524d\u4f1a\u5458\u7b49\u7ea7\u6ca1\u6709\u4f1a\u5458\uff0c\u8bf7\u5148\u6dfb\u52a0
+
 
 ###\u5f02\u5e38\u7c7b\u6807\u8bc6\u7b26
 user_not_found_exception=\u672a\u627e\u5230\u7528\u6237 - {0}
