finish all dish project functions

--- a/02_code/web/eorder-dish/src/main/resources/messages/messages.properties
+++ b/02_code/web/eorder-dish/src/main/resources/messages/messages.properties
@@ -98,25 +98,44 @@ cellphone_invalid=\u624b\u673a\u53f7\u7801\u65e0\u6548\uff01
 role_list_empty=\u89d2\u8272\u5217\u8868\u4e0d\u80fd\u4e3a\u7a7a\uff01
 
 #\u83dc\u5355\u5206\u7c7b\u6a21\u5757
-category_name=\u83dc\u5355\u5206\u7c7b\u540d\u79f0
-category_picture=\u83dc\u5355\u5206\u7c7b\u56fe\u7247
+category_name_label=\u83dc\u5355\u5206\u7c7b\u540d\u79f0
+category_picture_label=\u83dc\u5355\u5206\u7c7b\u56fe\u7247
 category_manage=\u83dc\u5355\u5206\u7c7b\u7ba1\u7406
 add_category=\u6dfb\u52a0\u83dc\u5355\u5206\u7c7b
 edit_category=\u4fee\u6539\u83dc\u5355\u5206\u7c7b
 category_name_occupy=\u83dc\u5355\u5206\u7c7b\u540d\u79f0\u5df2\u88ab\u5360\u7528\uff01
 category_name_empty=\u83dc\u5355\u5206\u7c7b\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a\uff01
 category_picture_empty=\u83dc\u5355\u5206\u7c7b\u56fe\u7247\u4e0d\u80fd\u4e3a\u7a7a\uff01
+category_save_success={0} - \u83dc\u5355\u5206\u7c7b\u6dfb\u52a0\u6210\u529f\uff01
+category_update_success={0} - \u83dc\u5355\u5206\u7c7b\u4fee\u6539\u6210\u529f\uff01
 
 #\u83dc\u54c1\u6a21\u5757
-dish_name=\u83dc\u54c1\u540d\u79f0
-dish_price=\u83dc\u54c1\u4ef7\u683c
-dish_picture=\u83dc\u54c1\u56fe\u7247
+dish_name_label=\u83dc\u54c1\u540d\u79f0
+dish_price_label=\u83dc\u54c1\u4ef7\u683c
+dish_picture_label=\u83dc\u54c1\u56fe\u7247
 dish_manage=\u83dc\u54c1\u7ba1\u7406
-add_dish=\u6dfb\u52a0\u83dc\u54c1
-edit_dish=\u4fee\u6539\u83dc\u54c1
+dish_add=\u6dfb\u52a0\u83dc\u54c1
+dish_edit=\u4fee\u6539\u83dc\u54c1
 dish_name_occupy=\u83dc\u54c1\u540d\u79f0\u5df2\u88ab\u5360\u7528\uff01
 dish_name_empty=\u83dc\u54c1\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a\uff01
 dish_price_empty=\u83dc\u54c1\u4ef7\u683c\u4e0d\u80fd\u4e3a\u7a7a\u62160\uff01
+dish_save_success={0} - \u83dc\u54c1\u6dfb\u52a0\u6210\u529f\uff01
+dish_update_success={0} - \u83dc\u54c1\u4fee\u6539\u6210\u529f\uff01
+
+#\u4f1a\u5458\u7ba1\u7406\u6a21\u5757
+level_name=\u4f1a\u5458\u7b49\u7ea7
+level_discount=\u6298\u6263
+level_score=\u5347\u7ea7\u79ef\u5206
+level_add=\u6dfb\u52a0\u4f1a\u5458\u7b49\u7ea7
+level_name_label=\u7b49\u7ea7\u540d\u79f0
+level_discount_label=\u7b49\u7ea7\u6298\u6263
+level_score_label=\u7b49\u7ea7\u79ef\u5206
+level_add_success={0} - \u4f1a\u5458\u7b49\u7ea7\u6dfb\u52a0\u6210\u529f\uff01
+level_remove_success=\u4f1a\u5458\u7b49\u7ea7\u5220\u9664\u6210\u529f\uff01
+level_discount_rule=\u4f1a\u5458\u6298\u6263\u5fc5\u987b\u662f1\u523010\u4e4b\u95f4\u7684\u6570\u503c
+level_name_rule=\u4f1a\u5458\u7b49\u7ea7\u540d\u79f0\u4e0d\u53ef\u4e3a\u7a7a
+level_score_rule=\u4f1a\u5458\u7b49\u7ea7\u79ef\u5206\u5fc5\u987b\u5927\u4e8e0
+level_invalid_vo=\u975e\u6cd5\u4f1a\u5458\u7b49\u7ea7\u8f93\u5165
 
 ###\u5f02\u5e38\u7c7b\u6807\u8bc6\u7b26
 user_not_found_exception=\u672a\u627e\u5230\u7528\u6237 - {0}
