--- a/02_code/web/eorder-dish/src/main/resources/messages/messages_zh_CN.properties
+++ b/02_code/web/eorder-dish/src/main/resources/messages/messages_zh_CN.properties
@@ -106,8 +106,11 @@ edit_category=\u4fee\u6539\u83dc\u5355\u5206\u7c7b
 category_name_occupy=\u83dc\u5355\u5206\u7c7b\u540d\u79f0\u5df2\u88ab\u5360\u7528\uff01
 category_name_empty=\u83dc\u5355\u5206\u7c7b\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a\uff01
 category_picture_empty=\u83dc\u5355\u5206\u7c7b\u56fe\u7247\u4e0d\u80fd\u4e3a\u7a7a\uff01
+category_name_rule=\u83dc\u5355\u5206\u7c7b\u540d\u79f0\u4e0d\u53ef\u4e3a\u7a7a
+pic_path_rule=\u56fe\u7247\u4e0d\u53ef\u4e3a\u7a7a
 category_save_success={0} - \u83dc\u5355\u5206\u7c7b\u6dfb\u52a0\u6210\u529f\uff01
 category_update_success={0} - \u83dc\u5355\u5206\u7c7b\u4fee\u6539\u6210\u529f\uff01
+category_invalid_vo=\u975e\u6cd5\u83dc\u5355\u5206\u7c7b\u8f93\u5165
 
 #\u83dc\u54c1\u6a21\u5757
 dish_name_label=\u83dc\u54c1\u540d\u79f0
@@ -116,11 +119,13 @@ dish_picture_label=\u83dc\u54c1\u56fe\u7247
 dish_manage=\u83dc\u54c1\u7ba1\u7406
 dish_add=\u6dfb\u52a0\u83dc\u54c1
 dish_edit=\u4fee\u6539\u83dc\u54c1
+dish_name_rule=\u83dc\u5355\u5206\u7c7b\u540d\u79f0\u4e0d\u53ef\u4e3a\u7a7a
 dish_name_occupy=\u83dc\u54c1\u540d\u79f0\u5df2\u88ab\u5360\u7528\uff01
 dish_name_empty=\u83dc\u54c1\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a\uff01
 dish_price_empty=\u83dc\u54c1\u4ef7\u683c\u4e0d\u80fd\u4e3a\u7a7a\u62160\uff01
 dish_save_success={0} - \u83dc\u54c1\u6dfb\u52a0\u6210\u529f\uff01
 dish_update_success={0} - \u83dc\u54c1\u4fee\u6539\u6210\u529f\uff01
+dish_invalid_vo=\u975e\u6cd5\u83dc\u54c1\u8f93\u5165
 
 #\u4f1a\u5458\u7ba1\u7406\u6a21\u5757
 level_name=\u4f1a\u5458\u7b49\u7ea7
