--- a/02_code/web/eorder-dish/src/main/resources/messages/messages.properties
+++ b/02_code/web/eorder-dish/src/main/resources/messages/messages.properties
@@ -111,6 +111,7 @@ pic_path_rule=\u56fe\u7247\u4e0d\u53ef\u4e3a\u7a7a
 category_save_success={0} - \u83dc\u5355\u5206\u7c7b\u6dfb\u52a0\u6210\u529f\uff01
 category_update_success={0} - \u83dc\u5355\u5206\u7c7b\u4fee\u6539\u6210\u529f\uff01
 category_invalid_vo=\u975e\u6cd5\u83dc\u5355\u5206\u7c7b\u8f93\u5165
+category_remove_msg=\u5220\u9664\u5206\u7c7b\u540e\uff0c\u83dc\u54c1\u5c06\u79fb\u5230\u9ed8\u8ba4\u5206\u7c7b\u4e0b\uff0c\u60a8\u786e\u5b9a\u8981\u5220\u9664\u5417\uff1f
 
 #\u83dc\u54c1\u6a21\u5757
 dish_name_label=\u83dc\u54c1\u540d\u79f0
@@ -127,6 +128,12 @@ dish_price_empty=\u83dc\u54c1\u4ef7\u683c\u4e0d\u80fd\u4e3a\u7a7a\u62160\uff01
 dish_save_success={0} - \u83dc\u54c1\u6dfb\u52a0\u6210\u529f\uff01
 dish_update_success={0} - \u83dc\u54c1\u4fee\u6539\u6210\u529f\uff01
 dish_invalid_vo=\u975e\u6cd5\u83dc\u54c1\u8f93\u5165
+
+#\u4e0a\u4f20\u6a21\u5757
+upload_choose_picture_label=\u9009\u62e9\u56fe\u7247
+upload_picture_label=\u4e0a\u4f20\u7684\u56fe\u7247
+upload_label=\u4e0a\u4f20\u56fe\u7247
+upload_exit_label=\u9000\u51fa
 
 #\u4f1a\u5458\u7ba1\u7406\u6a21\u5757
 level_name=\u4f1a\u5458\u7b49\u7ea7
