--- a/02_code/web/eorder-dish/src/main/resources/messages/messages_en_US.properties
+++ b/02_code/web/eorder-dish/src/main/resources/messages/messages_en_US.properties
@@ -128,6 +128,7 @@ dish_price_empty=\u83dc\u54c1\u4ef7\u683c\u4e0d\u80fd\u4e3a\u7a7a\u62160\uff01
 dish_save_success={0} - \u83dc\u54c1\u6dfb\u52a0\u6210\u529f\uff01
 dish_update_success={0} - \u83dc\u54c1\u4fee\u6539\u6210\u529f\uff01
 dish_invalid_vo=\u975e\u6cd5\u83dc\u54c1\u8f93\u5165
+dish_no_record=\u8be5\u83dc\u5355\u5206\u7c7b\u4e0b\u6ca1\u6709\u4efb\u4f55\u83dc\u54c1\uff01
 
 #\u4e0a\u4f20\u6a21\u5757
 upload_choose_picture_label=\u9009\u62e9\u56fe\u7247
