correct member score validation defects

--- a/02_code/web/eorder-member/src/main/resources/messages/messages.properties
+++ b/02_code/web/eorder-member/src/main/resources/messages/messages.properties
@@ -144,6 +144,7 @@ member_edit=\u7f16\u8f91\u7528\u6237\u4f1a\u5458\u4fe1\u606f
 member_add_success=\u6dfb\u52a0\u65b0\u4f1a\u5458\u6210\u529f!
 member_update_success=\u66f4\u65b0\u4f1a\u5458\u6210\u529f\uff01
 member_empty=\u5f53\u524d\u4f1a\u5458\u7b49\u7ea7\u6ca1\u6709\u4f1a\u5458\uff0c\u8bf7\u5148\u6dfb\u52a0
+member_bad_score=\u4f1a\u5458\u79ef\u5206\u5fc5\u987b\u4e3a\u5927\u4e8e0\u7684\u6574\u6570
 
 
 ###\u5f02\u5e38\u7c7b\u6807\u8bc6\u7b26
