--- a/02_code/web/eorder-dish/src/main/resources/messages/messages_en_US.properties
+++ b/02_code/web/eorder-dish/src/main/resources/messages/messages_en_US.properties
@@ -135,6 +135,8 @@ upload_choose_picture_label=\u9009\u62e9\u56fe\u7247
 upload_picture_label=\u4e0a\u4f20\u7684\u56fe\u7247
 upload_label=\u4e0a\u4f20\u56fe\u7247
 upload_exit_label=\u9000\u51fa
+upload_picture_success_msg=\u56fe\u7247\u4e0a\u4f20\u6210\u529f\uff01
+upload_picture_success_rule=\u56fe\u7247\u6587\u4ef6\u4e0d\u80fd\u4e3a\u7a7a\uff01
 
 #\u4f1a\u5458\u7ba1\u7406\u6a21\u5757
 level_name=\u4f1a\u5458\u7b49\u7ea7
