--- a/02_code/web/eorder-dish/src/main/resources/messages/messages_en_US.properties
+++ b/02_code/web/eorder-dish/src/main/resources/messages/messages_en_US.properties
@@ -120,7 +120,7 @@ dish_picture_label=\u83dc\u54c1\u56fe\u7247
 dish_manage=\u83dc\u54c1\u7ba1\u7406
 dish_add=\u6dfb\u52a0\u83dc\u54c1
 dish_edit=\u4fee\u6539\u83dc\u54c1
-dish_name_rule=\u83dc\u5355\u5206\u7c7b\u540d\u79f0\u4e0d\u53ef\u4e3a\u7a7a
+dish_name_rule=\u83dc\u54c1\u540d\u79f0\u4e0d\u53ef\u4e3a\u7a7a
 dish_price_rule=\u83dc\u54c1\u4ef7\u683c\u4e0d\u80fd\u4e3a\u7a7a\u62160\uff0c\u5fc5\u987b\u662f\u6709\u6548\u7684\u6570\u503c\uff01
 dish_name_occupy=\u83dc\u54c1\u540d\u79f0\u5df2\u88ab\u5360\u7528\uff01
 dish_name_empty=\u83dc\u54c1\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a\uff01
