--- a/02_code/web/eorder-dish/src/main/resources/messages/messages_en_US.properties
+++ b/02_code/web/eorder-dish/src/main/resources/messages/messages_en_US.properties
@@ -1,3 +1,5 @@
+BindAuthenticator.badCredentials=\u7528\u6237\u540d\u6216\u5bc6\u7801\u9519\u8bef
+
 #\u516c\u5171\u5b57\u6bb5
 eorder=\u9910\u5385\u8ba2\u9910\u7cfb\u7edf
 query=\u67e5\u8be2
@@ -129,6 +131,7 @@ dish_save_success={0} - \u83dc\u54c1\u6dfb\u52a0\u6210\u529f\uff01
 dish_update_success={0} - \u83dc\u54c1\u4fee\u6539\u6210\u529f\uff01
 dish_invalid_vo=\u975e\u6cd5\u83dc\u54c1\u8f93\u5165
 dish_no_record=\u8be5\u83dc\u5355\u5206\u7c7b\u4e0b\u6ca1\u6709\u4efb\u4f55\u83dc\u54c1\uff01
+dish_empty=\u5f53\u524d\u83dc\u5355\u5206\u7c7b\u4e0b\u6ca1\u6709\u83dc\u54c1\uff0c\u8bf7\u5148\u6dfb\u52a0
 
 #\u4e0a\u4f20\u6a21\u5757
 upload_choose_picture_label=\u9009\u62e9\u56fe\u7247
