--- a/02_code/web/eorder-member/src/main/resources/messages/messages.properties
+++ b/02_code/web/eorder-member/src/main/resources/messages/messages.properties
@@ -133,7 +133,7 @@ level_name_rule=\u4f1a\u5458\u7b49\u7ea7\u540d\u79f0\u4e0d\u53ef\u4e3a\u7a7a
 level_score_rule=\u4f1a\u5458\u7b49\u7ea7\u79ef\u5206\u5fc5\u987b\u5927\u4e8e0
 level_invalid_vo=\u975e\u6cd5\u4f1a\u5458\u7b49\u7ea7\u8f93\u5165
 level_edit=\u7f16\u8f91\u4f1a\u5458\u7b49\u7ea7
-level_update_success={0} - \u4f1a\u5458\u7b49\u7ea7\u4fee\u6539\u6210\uff01
+level_update_success={0} - \u4f1a\u5458\u7b49\u7ea7\u4fee\u6539\u6210\u529f\uff01
 member_name=\u7528\u6237\u4f1a\u5458
 member_id=\u4f1a\u5458\u53f7
 member_score=\u4f1a\u5458\u79ef\u5206
