--- a/02_code/web/eorder-member/src/main/resources/messages/messages_zh_CN.properties
+++ b/02_code/web/eorder-member/src/main/resources/messages/messages_zh_CN.properties
@@ -132,7 +132,7 @@ level_name_rule=\u4f1a\u5458\u7b49\u7ea7\u540d\u79f0\u4e0d\u53ef\u4e3a\u7a7a
 level_score_rule=\u4f1a\u5458\u7b49\u7ea7\u79ef\u5206\u5fc5\u987b\u5927\u4e8e0
 level_invalid_vo=\u975e\u6cd5\u4f1a\u5458\u7b49\u7ea7\u8f93\u5165
 level_edit=\u7f16\u8f91\u4f1a\u5458\u7b49\u7ea7
-level_update_success={0} - \u4f1a\u5458\u7b49\u7ea7\u4fee\u6539\u6210\uff01
+level_update_success={0} - \u4f1a\u5458\u7b49\u7ea7\u4fee\u6539\u6210\u529f\uff01
 member_name=\u7528\u6237\u4f1a\u5458
 member_select_level=\u8bf7\u5148\u9009\u62e9\u4e00\u4e2a\u4f1a\u5458\u7b49\u7ea7
 member_add=\u6dfb\u52a0\u4f1a\u5458
