--- a/02_code/web/eorder-member/src/main/resources/messages/messages_zh_CN.properties
+++ b/02_code/web/eorder-member/src/main/resources/messages/messages_zh_CN.properties
@@ -142,6 +142,7 @@ member_update_success=\u66f4\u65b0\u4f1a\u5458\u6210\u529f\uff01
 member_empty=\u5f53\u524d\u4f1a\u5458\u7b49\u7ea7\u6ca1\u6709\u4f1a\u5458\uff0c\u8bf7\u5148\u6dfb\u52a0
 member_bad_score=\u4f1a\u5458\u79ef\u5206\u5fc5\u987b\u4e3a\u5927\u4e8e0\u7684\u6574\u6570
 member_already_exists=\u4f1a\u5458\u5df2\u5b58\u5728 - {0}!
+member_remove_success=\u4f1a\u5458\u5220\u9664\u6210\u529f\uff01
 
 ###\u5f02\u5e38\u7c7b\u6807\u8bc6\u7b26
 user_not_found_exception=\u672a\u627e\u5230\u7528\u6237 - {0}
