--- a/02_code/web/eorder-order/src/main/resources/messages/messages_en_US.properties
+++ b/02_code/web/eorder-order/src/main/resources/messages/messages_en_US.properties
@@ -118,6 +118,8 @@ category_remove_msg=\u5220\u9664\u5206\u7c7b\u540e\uff0c\u83dc\u54c1\u5c06\u79fb
 #\u83dc\u54c1\u6a21\u5757
 dish_name_label=\u83dc\u54c1\u540d\u79f0
 dish_price_label=\u83dc\u54c1\u4ef7\u683c
+dish_price_thin_label=\u4ef7\u683c
+dish_price_sum_label=\u91d1\u989d
 dish_picture_label=\u83dc\u54c1\u56fe\u7247
 dish_manage=\u83dc\u54c1\u7ba1\u7406
 dish_add=\u6dfb\u52a0\u83dc\u54c1
@@ -213,7 +215,10 @@ other_info_label=\u5176\u4ed6\u4fe1\u606f
 order_detail_label=\u8ba2\u5355\u660e\u7ec6
 other_info_label=\u5176\u4ed6\u4fe1\u606f
 update_user_info_label=\u66f4\u65b0\u4f1a\u5458\u4fe1\u606f
+print_page_label=\u7ed3\u8d26\u5355
 print_label=\u6253\u5370\u5c0f\u7968
+print_thin_label=\u6253\u5370
+cancel_label=\u53d6\u6d88
 confirm_cash_label=\u786e\u8ba4\u6536\u6b3e
 
 total_price=\u603b\u4ef7
