fix 4 bugs for eorder project

--- a/02_code/web/eorder/src/main/resources/messages/messages.properties
+++ b/02_code/web/eorder/src/main/resources/messages/messages.properties
@@ -1,4 +1,7 @@
 BindAuthenticator.badCredentials=\u7528\u6237\u540d\u6216\u5bc6\u7801\u9519\u8bef
+AbstractUserDetailsAuthenticationProvider.badCredentials=\u7528\u6237\u540d\u6216\u5bc6\u7801\u9519\u8bef
+#LdapAuthenticationProvider.emptyPassword=\u574f\u7684\u51ed\u8bc12
+#PasswordComparisonAuthenticator.badCredentials=\u574f\u7684\u51ed\u8bc13
 
 #\u516c\u5171\u5b57\u6bb5
 eorder=\u9910\u5385\u8ba2\u9910\u7cfb\u7edf
